First Short -- Need to cleanup

--- a/apps/Tickerr/common/index.html
+++ b/apps/Tickerr/common/index.html
@@ -50,5 +50,7 @@
 	<script src="pages/majorIndexes/majorIndexes-controller.js"></script>
 	<script src="pages/quotes/quotes-controller.js"></script>
 	<script src="pages/settings/settings-controller.js"></script>
+	<script src="pages/quotes/nag_quotes-controller.js"></script>
+
 </body>
 </html>
