--- a/apps/Tickerr/common/pages/majorIndexes/majorIndexes.html
+++ b/apps/Tickerr/common/pages/majorIndexes/majorIndexes.html
@@ -10,7 +10,13 @@
   </div>
   <div class="item item-text-wrap">
     <button ng-click="vm.loadQuotes()">Load Quotes Page</button>
+    
   </div>
+  <div class="item item-text-wrap">
+  	<button ng-click="vm.loadNagQuotes()">Load Nag Quotes Page</button>
+  </div>
+  
+  
   <div class="item item-divider">
     Section Footer
   </div>
