modified js references to use extlib js files

--- a/apps/Tickerr/common/pages/quotes/nag_quotes.html
+++ b/apps/Tickerr/common/pages/quotes/nag_quotes.html
@@ -10,12 +10,12 @@
 
 <link rel="stylesheet" href="css/ionic.css">
 
-<script src="../../js/ionic.js"></script>
-<script src="../../js/angular/angular.min.js"></script>
-<script src="../../js/angular/angular-animate.min.js"></script>
-<script src="../../js/angular/angular-sanitize.min.js"></script>
-<script src="../../js/ionic-angular.js"></script>
-<script src="../../js/ionic.bundle.js"></script>
+<script src="../../js/extlib/ionic/ionic.js"></script>
+<script src="../../js/extlib/angular/angular.min.js"></script>
+<script src="../../js/extlib/angular/angular-animate.min.js"></script>
+<script src="../../js/extlib/angular/angular-sanitize.min.js"></script>
+<script src="../../js/extlib/ionic/ionic-angular.js"></script>
+<script src="../../js/extlib/ionic/ionic.bundle.js"></script>
 
 <script src="nag_quotes-controller.js"></script>
 
