--- a/apps/Tickerr/common/pages/quotes/nag_quotes.html
+++ b/apps/Tickerr/common/pages/quotes/nag_quotes.html
@@ -27,9 +27,10 @@
 			<button class="button button-assertive rounded">{{appName}}</button>
 			<a class="item  item-icon-right" href="#"> <i
 				class="icon ion-chatbubble-working"></i>
-			</a> <label class="item item-input"> <input type="text"
-				placeholder="Search">
+			</a> <label class="item item-input"> 
+			<input type="text" ng-model="searchQuote" name="searchQuote" placeholder="Search">
 			</label>
+			<button class="button button-assertive" ng-click="searchMe()">Search</button>
 		</div>
 
 		<div class="bar bar-subheader">
