--- a/apps/Tickerr/common/pages/settings/settings.html
+++ b/apps/Tickerr/common/pages/settings/settings.html
@@ -1,18 +1,109 @@
-<div class="list card">
-  <a href="#" class="item item-icon-left">
-    <i class="icon ion-home"></i>
-    Enter home address
-  </a>
-  <a href="#" class="item item-icon-left">
-    <i class="icon ion-ios-telephone"></i>
-    Enter phone number
-  </a>
-  <a href="#" class="item item-icon-left">
-    <i class="icon ion-wifi"></i>
-    Enter wireless password
-  </a>
-  <a href="#" class="item item-icon-left">
-    <i class="icon ion-card"></i>
-    Enter card information
-  </a>
+<div>
+
+<div class="row">
+	  <div class="col"><i>&nbsp;</i></div>
+	  <div class="col"><i>&nbsp;</i></div>
+	  <div class="col"><i>&nbsp;</i></div>
+</div>
+
+<div class="row">
+  <div class="col"><i>Security</i></div>
+</div>
+
+<div class="list">
+
+<ul class="list">
+  <li class="item item-toggle">
+     Passcode
+     <label class="toggle toggle-positive">
+       <input type="checkbox">
+       <div class="track">
+         <div class="handle"></div>
+       </div>
+     </label>
+  </li>
+  
+    <li class="item item-toggle">
+     Backup & restore
+     <label class="toggle toggle-positive">
+       <input type="checkbox">
+       <div class="track">
+         <div class="handle"></div>
+       </div>
+     </label>
+  </li>
+  
+</ul>
+</div>	
+
+<div class="row">
+  <div class="col"><i>Quotes</i></div>
+</div>
+
+<div class="list">
+
+<ul class="list">
+  <li class="item item-toggle">
+     Realtime Quotes (Stream)
+     <label class="toggle toggle-positive">
+       <input type="checkbox">
+       <div class="track">
+         <div class="handle"></div>
+       </div>
+     </label>
+  </li>
+  
+    <li class="item item-toggle">
+     Show After Hour Price
+     <label class="toggle toggle-positive">
+       <input type="checkbox">
+       <div class="track">
+         <div class="handle"></div>
+       </div>
+     </label>
+  </li>
+  
+  <li class="item item-toggle">
+     Flash on Price Change
+     <label class="toggle toggle-positive">
+       <input type="checkbox">
+       <div class="track">
+         <div class="handle"></div>
+       </div>
+     </label>
+  </li>
+  
+</ul>
+</div>	
+
+<div class="row">
+  <div class="col"><i>Alerts</i></div>
+</div>
+
+<div class="list">
+
+<ul class="list">
+  <li class="item item-toggle">
+     Banner Alerts
+     <label class="toggle toggle-positive">
+       <input type="checkbox">
+       <div class="track">
+         <div class="handle"></div>
+       </div>
+     </label>
+  </li>
+  
+    <li class="item item-toggle">
+     Flash News
+     <label class="toggle toggle-positive">
+       <input type="checkbox">
+       <div class="track">
+         <div class="handle"></div>
+       </div>
+     </label>
+  </li>  
+  
+</ul>
+</div>	
+
 </div>
