Additional framework files added
Additional framework files added

--- a/apps/Tickerr/common/index.html
+++ b/apps/Tickerr/common/index.html
@@ -41,6 +41,27 @@
 	<script src="js/initOptions.js"></script>
 	<script src="js/main.js"></script>
 	
+	<!-- Application Directives -->
+	
+	<!-- Application Filters -->
+	
+	<!-- Application Providers -->
+	<script src="js/providers/ConfigProvider.js"></script>
+	<script src="js/providers/providers.js"></script>
+	
+	<!-- Application Services -->
+	<script src="js/services/backendService.js"></script>
+	<script src="js/services/base64Service.js"></script>
+	<script src="js/services/busyIndicatorService.js"></script>
+	<script src="js/services/cacheService.js"></script>
+	<script src="js/services/dataStashService.js"></script>
+	<script src="js/services/portfolioService.js"></script>
+	<script src="js/services/storageService.js"></script>
+	<script src="js/services/services.js"></script>
+
+	<!-- Application Model classes -->
+	<script src="js/model/portfolio.js"></script>
+	
 	<!-- Application Routing Configuration -->
 	<script src="js/app.js"></script>
 	
@@ -50,7 +71,8 @@
 	<script src="pages/majorIndexes/majorIndexes-controller.js"></script>
 	<script src="pages/quotes/quotes-controller.js"></script>
 	<script src="pages/settings/settings-controller.js"></script>
-	<script src="pages/quotes/nag_quotes-controller.js"></script>
-
+	
+	
+	
 </body>
 </html>
