--- a/apps/Tickerr/common/index.html
+++ b/apps/Tickerr/common/index.html
@@ -43,12 +43,21 @@
 	
 	<!-- Application Routing Configuration -->
 	<script src="js/app.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	
 	<!-- Page specific controllers -->
 	<script src="pages/landing/landing-controller.js"></script>
 	<script src="pages/home/home-controller.js"></script>
 	<script src="pages/majorIndexes/majorIndexes-controller.js"></script>
+	<script src="pages/majorIndexes/usindexes-controller.js"></script>
+	<script src="pages/majorIndexes/commodities-controller.js"></script>
+	<script src="pages/portfolio/portfolio-controller.js"></script>
 	<script src="pages/quotes/quotes-controller.js"></script>
+	<script src="pages/quotes/quotes2-controller.js"></script>
+	<script src="pages/quotes/news-controller.js"></script>
+	<script src="pages/quotes/history-controller.js"></script>
 	<script src="pages/settings/settings-controller.js"></script>
+	<script src="pages/portfolio/portfolio-controller.js"></script>
+	
 </body>
 </html>
