--- a/apps/Tickerr/common/index.html
+++ b/apps/Tickerr/common/index.html
@@ -52,10 +52,10 @@
 	<script src="pages/majorIndexes/usindexes-controller.js"></script>
 	<script src="pages/majorIndexes/commodities-controller.js"></script>
 	<script src="pages/portfolio/portfolio-controller.js"></script>
-	<script src="pages/quotes/quotes-controller.js"></script>
+	<!--  <script src="pages/quotes/quotes-controller.js"></script>
 	<script src="pages/quotes/quotes2-controller.js"></script>
 	<script src="pages/quotes/news-controller.js"></script>
-	<script src="pages/quotes/history-controller.js"></script>
+	<script src="pages/quotes/history-controller.js"></script>-->
 	<script src="pages/settings/settings-controller.js"></script>
 	<script src="pages/portfolio/portfolio-controller.js"></script>
 	
