--- a/apps/Tickerr/common/pages/quotes/news.html
+++ b/apps/Tickerr/common/pages/quotes/news.html
@@ -44,12 +44,8 @@
 	</div>
 </div>
 
-<div class="row">
-  <div class="col"><i>Chart</i></div>
-</div>
-
 <div>
 	<div class="row item">
-	  <div class="col"><img src="http://ichart.finance.yahoo.com/b?s=AAPL&1" style="width : 400px;"></div>
+	  <div class="col"><i class="StockFeed"></i></div>
 	</div>	
 </div>
