--- a/apps/Tickerr/common/pages/quotes/quotes2.html
+++ b/apps/Tickerr/common/pages/quotes/quotes2.html
@@ -24,23 +24,23 @@
 
 <div class="list">
     <div class="row item">
-	  <div class="col padding"><i class="text-medium-ticker padding-right">AAPL</i><br><i class="text-small-last-update text-gray">Apple Inc</i></div>
-	  <div class="col"><i class="text-medium-index-price text-gray AAPLl"></i><br><i class="text-small-last-update text-gray padding AAPLltt"></i></div>
+	  <div class="col padding"><i class="text-medium-ticker padding-right">MSFT</i><br><i class="text-small-last-update text-gray">Microsoft Inc</i></div>
+	  <div class="col"><i class="text-medium-index-price text-gray MSFTl"></i><br><i class="text-small-last-update text-gray padding MSFTltt"></i></div>
 	  <div class="col-10"><span class="input-label ion-arrow-up-b"></span></div>
-	  <div class="col"><i class="padding text-green text-medium-ticker-chang AAPLc"></i></div>
+	  <div class="col"><i class="padding text-green text-medium-ticker-chang MSFTc"></i></div>
 	  <div class="col-10"><i class="padding"><img src="images/plus.png" class="img-stock-select"></i></div>
 	</div>
     <div class="row item">
 	  <div class="col padding"><i class="text-medium-ticker padding-right">Day High</i></div>
-	  <div class="col"><i class="text-medium-index-price text-gray">-</i></div>
+	  <div class="col"><i class="text-medium-index-price text-gray MSFThl"></i></div>
 	  <div class="col padding"><i class="text-medium-ticker padding-right">Day Low</i></div>
-	  <div class="col"><i class="text-medium-index-price text-gray">-</i></div>
+	  <div class="col"><i class="text-medium-index-price text-gray MSFTll"></i></div>
 	</div>
      <div class="row item">
 	  <div class="col padding"><i class="text-medium-ticker padding-right">Volume</i></div>
-	  <div class="col"><i class="text-medium-index-price text-gray">-</i></div>
+	  <div class="col"><i class="text-medium-index-price text-gray MSFTv"></i></div>
 	  <div class="col padding"><i class="text-medium-ticker padding-right">Div/Yld</i></div>
-	  <div class="col"><i class="text-medium-index-price text-gray AAPLdiv/AAPLyld">-</i></div>
+	  <div class="col"><i class="text-medium-index-price text-gray">-</i></div>
 	</div>
 </div>
 
@@ -50,6 +50,6 @@
 
 <div>
 	<div class="row item">
-	  <div class="col"><img src="http://ichart.finance.yahoo.com/b?s=AAPL&1" style="width : 400px;"></div>
+	  <div class="col"><img src="http://ichart.finance.yahoo.com/b?s=MSFT&1" style="width : 400px;"></div>
 	</div>	
 </div>
