Service integration completed for Major Indexes page
Service integration completed for Major Indexes page

--- a/apps/Tickerr/common/pages/home/home.html
+++ b/apps/Tickerr/common/pages/home/home.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div id="pagePlaceHolder" data-ui-view has-subheader>
+<div id="pagePlaceHolder" data-ui-view>
 </div> 
 
 <!-- 
