CSS changes applied for navigation image
CSS changes applied for navigation image

--- a/apps/Tickerr/common/pages/majorIndexes/majorIndexes.html
+++ b/apps/Tickerr/common/pages/majorIndexes/majorIndexes.html
@@ -31,8 +31,7 @@
 						<i class="padding text-red text-medium-ticker-change"></i>
 					</div>
 					<div class="col-10">
-						<i class="padding"><img src="images/06_arrow2.gif"
-							class="img-stock-select"></i>
+						<i class="padding"><div class="ionic ion-chevron-right"></div></i>
 					</div>
 				</div>
 			</div>
