Added New Ticker controller to show news
Added New Ticker controller to show news

--- a/apps/Tickerr/common/index.html
+++ b/apps/Tickerr/common/index.html
@@ -88,6 +88,7 @@
 	<script src="pages/quotes/news-controller.js"></script>
 	<script src="pages/quotes/history-controller.js"></script>-->
 	<script src="pages/settings/settings-controller.js"></script>
+	<script src="pages/quotes/newsticker-controller.js"></script>
 	
 </body>
 </html>
