--- a/apps/Tickerr/common/pages/majorIndexes/majorIndexes.html
+++ b/apps/Tickerr/common/pages/majorIndexes/majorIndexes.html
@@ -28,7 +28,7 @@
 						<i class="text-small-last-update text-gray" data-ng-bind="symbol.lastUpdated"></i>
 					</div>
 					<div class="col">
-						<i class="padding text-red text-medium-ticker-change" data-ng-bind="symbol.change"></i>
+						<i class="padding text-medium-ticker-change" data-ng-bind="symbol.change" ng-class="symbol.change > 0? 'text-green': 'text-red'"></i>
 					</div>
 					<div class="col-10">
 						<i class="padding"><div class="ionic ion-chevron-right"></div></i>
