--- a/apps/Tickerr/common/pages/settings/settings.html
+++ b/apps/Tickerr/common/pages/settings/settings.html
@@ -43,34 +43,21 @@
 <div class="list">
 
 <ul class="list">
+
   <li class="item item-toggle">
      Realtime Quotes (Stream)
      <label class="toggle toggle-positive">
-<<<<<<< HEAD
-       <input type="checkbox" ng-click='saveSettings()' ng-model="chkRealtimeQuotes">
-=======
        <input type="checkbox" ng-model="settings.realtime" ng-click="saveSettings()">
->>>>>>> 5b635c44bcf8f46232c71290a1349b31e2104bff
        <div class="track">
          <div class="handle"></div>
        </div>
      </label>
   </li>
-  
-    <li class="item item-toggle">
-     Show After Hour Price
-     <label class="toggle toggle-positive">
-       <input type="checkbox">
-       <div class="track">
-         <div class="handle"></div>
-       </div>
-     </label>
-  </li>
-  
+   
   <li class="item item-toggle">
      Flash on Price Change
      <label class="toggle toggle-positive">
-       <input type="checkbox">
+       <input type="checkbox"  ng-model="settings.flashonpricechange" ng-click="saveSettings()">
        <div class="track">
          <div class="handle"></div>
        </div>
@@ -90,7 +77,7 @@
   <li class="item item-toggle">
      Banner Alerts
      <label class="toggle toggle-positive">
-       <input type="checkbox">
+       <input type="checkbox"  ng-model="settings.banneralerts" ng-click="saveSettings()">
        <div class="track">
          <div class="handle"></div>
        </div>
@@ -100,7 +87,7 @@
     <li class="item item-toggle">
      Flash News
      <label class="toggle toggle-positive">
-       <input type="checkbox">
+       <input type="checkbox"  ng-model="settings.flashnews" ng-click="saveSettings()">
        <div class="track">
          <div class="handle"></div>
        </div>
@@ -110,9 +97,5 @@
 </ul>
 </div>	
 
-<!-- <div class="col">-->
-<!--	<input type="hidden" placeholder="Search" ng-model="ticker" />-->
-<!--	<button class="button button-calm" ng-click="saveSettings()">Save Settings</button>-->
-<!-- </div> -->
 
 </div>
