--- a/apps/Tickerr/common/pages/home/home.html
+++ b/apps/Tickerr/common/pages/home/home.html
@@ -2,24 +2,16 @@
 	<div class="col">
 		<i><img src="images/ticker-round.png" width="30px" height="30px"></i>
 	</div>
-<<<<<<< HEAD
-	<div class="col">
-=======
+
 	<div class="col"">
->>>>>>> 5b635c44bcf8f46232c71290a1349b31e2104bff
 		<label class="item-input-wrapper list"> <i
 			class="icon ion-ios7-search placeholder-icon"></i> <input
 			type="search" placeholder="Search" ng-model="ticker" />
 		</label>
 	</div>
-<<<<<<< HEAD
+
 	<div class="col">
 		<button class="button button-calm" ng-click="showTickerDetails()">Get Quote</button>
-=======
-	<div class="col"">
-		<button ng-click="showTickerDetails()">GET</button>
-
->>>>>>> 5b635c44bcf8f46232c71290a1349b31e2104bff
 	</div>
 </div>
 
@@ -31,12 +23,15 @@
  -->
 
 <div class="bar bar-footer app-footer">
-	<ion-tabs class="tabs-positive tabs-icon-only"> <ion-tab
+	<ion-tabs class="tabs-positive tabs-icon-only"> 
+	<ion-tab
 		title="Home" icon-on="ion-ios-home" icon-off="ion-ios-home-outline"
-		ui-sref="MAJOR_INDEXES"> <!-- Tab 1 content --> </ion-tab> <ion-tab
+		ui-sref="MAJOR_INDEXES"> <!-- Tab 1 content --> </ion-tab> 
+	<ion-tab
 		title="Portfolio" icon-on="ion-ios-list"
 		icon-off="ion-ios-list-outline" ui-sref="PORTFOLIO"> <!-- Tab 1 content -->
 	</ion-tab> <ion-tab title="Settings" icon-on="ion-ios-gear"
 		icon-off="ion-ios-gear-outline" ui-sref="SETTINGS"> <!-- Tab 2 content -->
-	</ion-tab> </ion-tabs>
+	</ion-tab> 
+	</ion-tabs>
 </div>
