--- a/apps/Tickerr/common/pages/home/home.html
+++ b/apps/Tickerr/common/pages/home/home.html
@@ -30,7 +30,12 @@
 	<ion-tab
 		title="Portfolio" icon-on="ion-ios-list"
 		icon-off="ion-ios-list-outline" ui-sref="PORTFOLIO"> <!-- Tab 1 content -->
-	</ion-tab> <ion-tab title="Settings" icon-on="ion-ios-gear"
+	</ion-tab> 
+	<ion-tab
+		title="Portfolio3" icon-on="ion-ios-list"
+		icon-off="ion-ios-list-outline" ui-sref="PORTFOLIO3"> <!-- Tab 1 content -->
+	</ion-tab>
+	<ion-tab title="Settings" icon-on="ion-ios-gear"
 		icon-off="ion-ios-gear-outline" ui-sref="SETTINGS"> <!-- Tab 2 content -->
 	</ion-tab> 
 	</ion-tabs>
