--- a/apps/Tickerr/common/index.html
+++ b/apps/Tickerr/common/index.html
@@ -84,6 +84,7 @@
 	<script src="pages/majorIndexes/commodities-controller.js"></script>
 	<script src="pages/majorIndexes/currencies-controller.js"></script>
 	<script src="pages/portfolio/portfolio-controller.js"></script>
+	<script src="pages/portfolio/portfolio3-controller.js"></script>
 	<script src="pages/quotes/quotes-controller.js"></script>
 	<script src="pages/quotes/news-controller.js"></script>
 	<script src="pages/quotes/history-controller.js"></script>-->
