--- a/apps/Tickerr/common/pages/portfolio/portfolio.html
+++ b/apps/Tickerr/common/pages/portfolio/portfolio.html
@@ -32,8 +32,8 @@
 						<i class="padding text-medium-ticker-change" data-ng-bind="symbol.change" ng-class="symbol.change > 0? 'text-green': 'text-red'"></i>
 					</div>
 					<div class="col-10">
-						<a class="padding"><img src="images/06_arrow2.gif" class="img-stock-select"></a>
-						<button class="button button-calm" ng-model="symbol.name" ng-click="showTickerDetails()"></button>
+						<a class="padding"><img src="images/06_arrow2.gif" class="img-stock-select" ng-model="symbol.name" ng-click="showTickerDetails(symbol.name)"></a>
+						<button class="button button-calm" ng-model="symbol.name" ng-click="showTickerDetails(symbol.name)"></button>
 					</div>
 				</div>
 			</div>
